:sparkles: feat(security): 更新CORS配置以支持更多域名和方法
- 添加生产域名和多个本地开发域名到允许列表- 增加 PATCH 方法到允许的请求方法
- 明确设置允许的请求头为所有
- 启用凭证支持（如 Cookie）- 设置预检请求有效期为3600秒